<?xml version="1.0"?>
<package>
  <name>system</name>
  <version>1.0.0</version>
  <description>Lidar Odometry</description>

  <maintainer email="shant@mit.edu">Tixiao Shan</maintainer>

  <license>TODO</license>

  <author>Tixiao Shan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>
    <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
    <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>


</package>
